nova blurb spacing fix mobile

--- a/src/screens/NovaPageMobile/style.css
+++ b/src/screens/NovaPageMobile/style.css
@@ -102,7 +102,7 @@
     line-height: normal;
     position: absolute;
     text-align: right;
-    top: 235px;
+    top: 215px;
     width: 295px;
   }
   
@@ -116,7 +116,7 @@
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
-    top: 343px;
+    top: 323px;
     width: 295px;
   }
   
